--- a/flappenv.ipynb
+++ b/flappenv.ipynb
@@ -114,7 +114,7 @@
     "        if iters >= 5:\n",
     "            break\n",
     "for i in range(5):\n",
-    "    model_dir = f\"models_test2/{i}\"\n",
+    "    model_dir = f\"models_test/{i}\"\n",
     "    log_dir = f\"logs_test/{i}\"\n",
     "    os.makedirs(model_dir, exist_ok=True)\n",
     "    os.makedirs(log_dir, exist_ok=True)\n",
